Feature: Add HTTP Service
